# image_ex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mix.exs
cpp_src/: gif_ex_nif.cpp  image_ex_nif.cpp  image_ex_nif.h  lodepng.cpp
lib/: base.ex  gif.ex  image_ex.ex  png.ex
test/: image_ex_test.exs
